--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <span class="flaticon-mortarboard text-white"></span>
               </div>
               <div class="feature-1-content">
-                <h2> Наши учетиля</h2>
+                <h2> Наши учителя</h2>
                 <p></p>
                 <p><a href="#" class="btn btn-primary px-4 rounded-0">Смотреть</a></p>
               </div>
@@ -164,7 +164,7 @@
                 <span class="flaticon-school-material text-white"></span>
               </div>
               <div class="feature-1-content">
-                <h2>Лучшие учники</h2>
+                <h2>Лучшие ученики</h2>
                 <p></p>
                 <p><a href="#" class="btn btn-primary px-4 rounded-0">Смотреть</a></p>
               </div>
@@ -176,7 +176,7 @@
                 <span class="flaticon-library text-white"></span>
               </div>
               <div class="feature-1-content">
-                <h2>Дрескод школы</h2>
+                <h2>Полезное</h2>
                 <p></p>
                 <p><a href="#" class="btn btn-primary px-4 rounded-0">Смотреть</a></p>
               </div>
@@ -406,8 +406,8 @@
           </div>
           <div class="col-lg-3">
             <div class="section-heading">
-              <h2 class="text-black">Кампус видио</h2>
-              <a href="#">Посмотреть все видио</a>
+              <h2 class="text-black">Кампус видео</h2>
+              <a href="#">Посмотреть все видео</a>
             </div>
            <iframe width="350" height="200" src="https://www.youtube.com/embed/x0fIyhFIfjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <span class="play"></span>
@@ -428,7 +428,7 @@
         <div class="row align-items-center">
           <div class="col-lg-7">
             <h2>Подпишись на нас!</h2>
-            <p>Далеко-далеко, за словом горы, далеко от стран Вокалия и Консонантии.</p>
+            <p></p>
           </div>
           <div class="col-lg-5">
             <form action="" class="d-flex">
